# Chat_KIVY_linux_frontend

./: PROJECT_RULES.md  README.md  main.py  pyproject.toml
chat_ui/: __init__.py  chat_screen.py  config.py  logging_config.py  theme.py  websocket_client.py
chat_ui/components/: __init__.py  chat_header.py  message_bubble.py
chat_ui/services/: __init__.py  message_service.py
chat_ui/tests/: __init__.py  test_config.py  test_message_service.py  test_theme.py  test_websocket_client.py
chat_ui/websocket/: __init__.py  client.py  connection_manager.py  health_monitor.py  message_handler.py  reconnection_manager.py
