[project]
name = "chat-kivy-linux-frontend"
version = "0.1.0"
description = "Modern Kivy Chat Frontend for Linux"
authors = [
    {name = "Chat UI Team", email = "team@chatui.com"}
]
dependencies = [
    "kivy==2.3.1",
    # KivyMD is managed via [tool.uv.sources] due to temporary override
    "websockets==13.1",
    "structlog==24.1.0",
]
requires-python = "==3.13.5"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==4.1.0",
    "ruff==0.3.0",
    "mypy==1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_ui"]

[tool.uv]
dev-dependencies = [
    "black==25.1.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==4.1.0",
    "ruff==0.3.0",
    "mypy==1.9.0",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }

[tool.pytest.ini_options]
testpaths = ["chat_ui/tests"]
python_files = ["test_*.py"]
addopts = "--cov=chat_ui.theme --cov-report=term-missing --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 70

[tool.ruff]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103"]  # Ignore docstring rules for test code
line-length = 100

[tool.mypy]
python_version = "3.13.5"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
